# src/entities/session/dto/book-session.dto.ts
@@ -1,0 +1,10 @@
+import { SessionCategory } from "../session.entity";
+
+export interface BookSessionDto {
+  mentorId: string;
+  title: string;
+  category: SessionCategory;
+  startTime: string | Date;
+  endTime?: string | Date;
+  description?: string;
+}
